// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EbayAvatar /> rendering renders a different color for different users 1`] = `
<div>
  <div
    aria-label="Signed in as Elizabeth"
    class="avatar avatar--magenta"
    role="img"
  >
    R
  </div>
</div>
`;

exports[`<EbayAvatar /> rendering renders a different color for different users 2`] = `
<div>
  <div
    aria-label="Signed in as Elizabeth"
    class="avatar avatar--green"
    role="img"
  >
    T
  </div>
</div>
`;

exports[`<EbayAvatar /> rendering renders a different color for different users 3`] = `
<div>
  <div
    aria-label="Signed in as Elizabeth"
    class="avatar avatar--lime"
    role="img"
  >
    J
  </div>
</div>
`;

exports[`<EbayAvatar /> rendering renders default story correctly 1`] = `
<div>
  <div
    aria-label="Signed in as Elizabeth"
    class="avatar avatar--teal"
    role="img"
  >
    E
  </div>
</div>
`;

exports[`<EbayAvatar /> rendering renders signed out story correctly 1`] = `
<div>
  <div
    aria-label="Signed out"
    class="avatar avatar--teal"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="icon icon--avatar-signed-out"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-avatar-signed-out"
      />
    </svg>
  </div>
</div>
`;

exports[`<EbayAvatar /> rendering renders with custom body story correctly 1`] = `
<div>
  <div
    aria-label="Signed in as Elizabeth"
    class="avatar avatar--teal"
    role="img"
  >
    <div
      style="display: flex; align-items: center; justify-content: center; height: 100%; width: 100%; color: white; background-color: black;"
    >
      <span>
        EB
      </span>
    </div>
  </div>
</div>
`;

exports[`<EbayAvatar /> rendering renders with image story correctly 1`] = `
<div>
  <div
    aria-label="Signed in as Elizabeth"
    class="avatar avatar--teal"
    role="img"
  >
    <img
      alt="my photo"
      src="https://ir.ebaystatic.com/cr/v/c01/skin/docs/dog_profile.png"
    />
  </div>
</div>
`;
